{{$NEXT}}

0.201000 2016-04-22

- The insertion methods now take a merge_strategy argument.
- An add-only-if-parent-exists merge strategy was added. This replaces the
  functionality of insert_only_if_parent_exists.
- Deprecated insert_only_if_parent_exists and force_overwrite insertion
  arguments. These arguments will now warn and will be removed in a future
  major release.
- Deprecated merge_record_collisions constructor argument. This argument will
  now warn and will be removed in a future major release.


0.200004 2016-04-20

- Added the optional tree insertion argument insert_only_if_parent_exists.
  When enabled, data will be inserted if a record already exists for the
  network and only if the parent hash reference already exists. This argument
  can only be used when the merge_strategy is "recurse".


0.200003 2016-04-11

- The Teredo range is no longer removed from the database when
  "remove_reserved_networks" is enabled. This range is globally routable and
  aliased to the IPv4 range when "alias_ipv6_to_ipv4" is enabled. Previously
  this alias would be removed if both "alias_ipv6_to_ipv4" and
  "remove_reserved_networks" were enabled.
- Allow changing the record size when unfreezing a frozen tree


0.200002 2016-04-07

- The in-memory tree now has a root record rather than a root node. This fixes
  the insertion of a /0 network (GitHub #55) and a segmentation fault when
  merging two /1 networks into a /0 network (GitHub #58). Although insertions
  of /0 are allowed (e.g., to create a default record for the database),
  writing, iterating, and freezing a database that only contains a single /0
  data record are currently forbidden.
- Fixed a bug where an incorrect node_count could be written to the database,
  causing invalid metadata errors when reading it.
- The node_count() method on the Tree object now always recalculates the node
  count rather than using a possibly incorrect cached value.


0.200001 2016-04-04

[ BACKWARDS INCOMPATIBILITIES ]
